basic functionality set up. Final functions needed is populate new question when one is done, use local storage to save and recall for leaderboard section. Then css touch ups needed.

--- a/style.css
+++ b/style.css
@@ -2,11 +2,9 @@ header {
     text-align: center;
 }
 
-main div h2 {
+#questionEl {
+    padding-right: 50px;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: right;
 }
 
 #timerCountdown {
